--- a/index.html
+++ b/index.html
@@ -3,113 +3,310 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Soal Sederhana</title>
+    <title>Jasa Pembuatan Web & Data Entry Profesional</title>
     <style>
         body {
-            font-family: sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f8ff;
+            color: #333;
+            overflow-x: hidden;
             display: flex;
             flex-direction: column;
+            justify-content: flex-start;
             align-items: center;
-            justify-content: center;
             min-height: 100vh;
-            margin: 0;
-            background-color: #f4f4f4;
+            position: relative;
         }
 
-        .container {
-            background-color: #fff;
+        .container-section {
+            max-width: 800px;
+            width: 90%;
+            margin-top: 30px;
+            margin-bottom: 30px;
             padding: 30px;
+            background-color: #fff;
+            border: 1px solid #e0e0e0;
             border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.08);
+            opacity: 0;
+            transform: translateY(30px);
+            animation: fadeInUp 0.8s ease-out forwards 0.2s;
+        }
+
+        .container-section:nth-child(2) {
+            animation-delay: 0.4s;
+        }
+
+        .container-section:nth-child(3) {
+            animation-delay: 0.6s;
+        }
+
+        .container-section:nth-child(4) {
+            animation-delay: 0.8s;
+        }
+
+        h1 {
+            color: #007bff;
             text-align: center;
+            margin-bottom: 30px;
+            opacity: 0;
+            transform: translateY(30px);
+            animation: fadeInUp 0.8s ease-out forwards 0.2s;
         }
 
         h2 {
-            color: #333;
-            margin-bottom: 20px;
-        }
-
-        img {
-            max-width: 200px;
-            height: auto;
+            color: #007bff;
+            text-align: left;
             margin-bottom: 20px;
         }
 
         p {
-            font-size: 18px;
-            margin-bottom: 15px;
+            line-height: 1.7;
+            margin-bottom: 20px;
+            opacity: 0;
+            transform: translateY(20px);
+            animation: fadeInUp 0.8s ease-out forwards 0.4s;
+            text-align: left;
         }
 
-        input[type="text"] {
-            padding: 10px;
-            font-size: 16px;
-            border: 1px solid #ccc;
+        .services {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .service-card {
+            padding: 20px;
+            background-color: #fff;
             border-radius: 5px;
+            border: 1px solid #ddd;
+        }
+
+        .service-card h3 {
+            color: #28a745;
+            margin-top: 0;
+            margin-bottom: 10px;
+        }
+
+        .service-card ul {
+            list-style: none;
+            padding-left: 20px;
+        }
+
+        .service-card li {
+            margin-bottom: 8px;
+            position: relative;
+        }
+
+        .service-card li::before {
+            content: "\2022";
+            color: #007bff;
+            position: absolute;
+            left: -15px;
+        }
+
+        .additional-services ul {
+            list-style: none;
+            padding-left: 20px;
+        }
+
+        .additional-services li {
+            margin-bottom: 12px;
+            padding-left: 20px;
+            position: relative;
+        }
+
+        .additional-services li::before {
+            content: "\2713";
+            color: #28a745;
+            position: absolute;
+            left: -15px;
+        }
+
+        .contact-info p {
             margin-bottom: 15px;
-            width: 250px;
+            text-align: left;
         }
 
-        button {
-            padding: 10px 20px;
-            font-size: 16px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            margin: 5px;
-        }
-
-        .jawab-button {
+        .contact-button {
+            display: inline-block;
+            padding: 12px 24px;
             background-color: #007bff;
             color: white;
+            text-decoration: none;
+            border-radius: 8px;
+            margin-top: 20px;
+            transition: background-color 0.3s ease;
+            text-align: center;
         }
 
-        .lihat-jawaban-button {
-            background-color: #28a745;
-            color: white;
-        }
-
-        .jawab-button:hover {
+        .contact-button:hover {
             background-color: #0056b3;
         }
 
-        .lihat-jawaban-button:hover {
-            background-color: #1e7e34;
+        #redirectButton {
+            position: fixed;
+            right: 20px;
+            bottom: 20px;
+            padding: 12px 24px;
+            color: black; /* Warna teks hitam */
+            text-decoration: none;
+            border-radius: 8px;
+            transition: background-color 0.3s ease, opacity 0.3s ease, color 0.3s ease;
+            text-align: center;
+            opacity: 0.7; /* Tetap sedikit terlihat */
+            background-color: transparent; /* Latar belakang transparan */
+            border: 2px solid #ccc; /* Border tetap ada */
+            cursor: default;
+            pointer-events: none;
+            display: flex; /* Untuk mengatur tata letak di dalamnya */
+            flex-direction: column; /* Menyusun item secara vertikal */
+            align-items: center; /* Membuat item berada di tengah horizontal */
+            justify-content: center; /* Membuat item berada di tengah vertikal */
+            line-height: 1.2; /* Mengurangi jarak antar baris teks */
         }
 
-        #hasil {
-            margin-top: 20px;
-            font-weight: bold;
+        #redirectButton.active {
+            background-color: #28a745; /* Warna hijau untuk tombol aktif */
+            opacity: 1;
+            color: white;
+            cursor: pointer;
+            pointer-events: auto;
+        }
+
+        #redirectButton:hover.active {
+            background-color: #218838; /* Warna hijau lebih gelap saat dihover */
+        }
+
+        .promo-item {
+            font-size: 0.8em; /* Ukuran font lebih kecil untuk item promo */
+            margin-bottom: 5px; /* Jarak antar item promo */
+        }
+
+        .promo-title {
+            font-weight: bold; /* Judul promo lebih tebal */
+            margin-bottom: 2px;
+        }
+
+        /* Keyframes untuk animasi fade-in dari bawah */
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(30px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h2>Tebak Ram Ps3 Di Bawah ini !!</h2>
-        <img src="https://j.top4top.io/p_3388o7ggx0.jpg">
-        <p>Pertanyaan soalnya,total ram PS3 ini RAM berapa?</p>
-        <input type="text" id="jawabanPengguna" placeholder="Contoh: 30gb (huruf kecil semua)">
-        <button class="jawab-button" onclick="periksaJawaban()">Jawab</button>
-        <button class="lihat-jawaban-button" onclick="window.location.href='https://s.shopee.co.id/9pQttM6JZo'">Lihat Jawaban di shoppe</button>
-        <div id="hasil"></div>
+    <div class="container-section">
+        <h1>Solusi Digital Profesional</h1>
+        <p>Kami hadir untuk membantu Anda mewujudkan website impian dan mengelola data dengan efisien.</p>
     </div>
 
-    <script>
-        function periksaJawaban() {
-            const jawabanPengguna = document.getElementById("jawabanPengguna").value.trim().toLowerCase();
-            const jawabanBenar = "580gb"; // Jawaban yang dianggap benar
-            const nomorWhatsApp = "6285711374861";
-            let pesanWhatsApp = "";
+    <div class="container-section services">
+        <h2>Layanan Utama Kami</h2>
+        <div class="service-card">
+            <h3>Jasa Pembuatan Website</h3>
+            <p>Kami mengembangkan berbagai jenis website dengan desain modern dan fungsionalitas lengkap:</p>
+            <ul>
+                <li>Website Perusahaan</li>
+                <li>Toko Online (E-commerce)</li>
+                <li>Website Portofolio Kreatif</li>
+                <li>Blog Interaktif</li>
+                <li>Landing Page Konversi Tinggi</li>
+                <li>Solusi Website Custom</li>
+            </ul>
+            <p>Kami memastikan website Anda responsif di berbagai perangkat dan dioptimalkan untuk performa terbaik.</p>
+        </div>
 
-            if (jawabanPengguna === jawabanBenar) {
-                pesanWhatsApp = encodeURIComponent(`Saya menjawab benar pertanyaan tentang RAM PS3! Jawaban saya adalah: ${jawabanPengguna} Aku lagi sebar DANA Kaget nih! Yuk, sikat segera sebelum melayang 💸💸💸 https://link.dana.id/danakaget?c=swrcxjlln&r=cAYM8h&orderId=20250411101214282315010300166998217191404`);
-                window.location.href = `https://wa.me/${nomorWhatsApp}?text=${pesanWhatsApp}`;
-            } else {
-                document.getElementById("hasil").innerText = "Jawaban Anda salah. Coba lagi!";
-                pesanWhatsApp = encodeURIComponent(`Saya menjawab salah pertanyaan tentang RAM PS3. Jawaban saya adalah: ${jawabanPengguna}`);
-                // Anda bisa menambahkan logika di sini jika ingin tetap mengirim pesan WA meskipun jawaban salah
-                // window.location.href = `https://wa.me/${nomorWhatsApp}?text=${pesanWhatsApp}`;
+        <div class="service-card">
+            <h3>Jasa Data Entry & Pengelolaan Data</h3>
+            <p>Percayakan pengelolaan data Anda kepada tim profesional kami:</p>
+            <ul>
+                <li>Input Data Akurat dan Cepat</li>
+                <li>Validasi dan Pembersihan Data</li>
+                <li>Konversi Format Data</li>
+                <li>Pengolahan Database Terstruktur</li>
+                <li>Entri Data Produk E-commerce</li>
+                <li>Layanan Data Entry Sesuai Kebutuhan</li>
+            </ul>
+            <p>Kami menjaga kerahasiaan dan integritas data Anda dengan standar tertinggi.</p>
+        </div>
+    </div>
+
+    <div class="container-section additional-services">
+        <h2>Layanan Tambahan untuk Produktivitas Anda</h2>
+        <ul>
+            <li><strong>Merapikan Dokumen MS Office:</strong> Formatting profesional untuk Word, Excel, dan PowerPoint.</li>
+            <li><strong>Optimasi SEO Awal:</strong> Meningkatkan visibilitas website Anda di mesin pencari.</li>
+            <li><strong>Konsultasi Digital:</strong> Solusi dan strategi untuk pengembangan bisnis online Anda.</li>
+        </ul>
+    </div>
+
+    <div class="container-section contact-info">
+        <h2>Siap Meningkatkan Kehadiran Digital Anda?</h2>
+        <p>Hubungi kami sekarang untuk konsultasi gratis dan penawaran terbaik!</p>
+        <p>Email: <a href="mailto:nara@gmail.com" style="color: #007bff; text-decoration: none;">nara@gmail.com</a></p>
+        <p>WhatsApp: <a href="https://wa.me/6285711374861" target="_blank" style="color: #007bff; text-decoration: none;">085711374861</a></p>
+        <div style="text-align: left;">
+        </div>
+    </div>
+
+    <a id="redirectButton">
+        <span id="promoCountdown">KLAIM DAGET 25 </span>
+    </a>
+
+    <script>
+        const redirectButton = document.getElementById('redirectButton');
+        const promoCountdown = document.getElementById('promoCountdown');
+        let countdown = 25;
+        const whatsappNumber = '6285711374861';
+        const promoText = encodeURIComponent(`Halo, saya menawarkan jasa berikut:\n- Website Profesional\n- Data Entry Cepat\n\n  ͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏͏ Aku lagi sebar DANA Kaget nih! Yuk, sikat segera sebelum melayang 💸💸💸 https://link.dana.id/danakaget?c=sxezfucwx&r=cAYM8h&orderId=20250411101214752015010300166998217189818`);
+        const promoItems = [
+            { title: "KLAIM DANA KAGET", detail: "hanya untuk 30 orang saja" },
+
+        ];
+
+        const countdownInterval = setInterval(() => {
+            countdown--;
+            promoCountdown.textContent = `KLAIM DAGET ${countdown}`;
+
+            if (countdown <= 0) {
+                clearInterval(countdownInterval);
+                redirectButton.innerHTML = ''; // Kosongkan teks countdown
+                promoItems.forEach(item => {
+                    const itemDiv = document.createElement('div');
+                    itemDiv.classList.add('promo-item');
+                    const titleSpan = document.createElement('span');
+                    titleSpan.classList.add('promo-title');
+                    titleSpan.textContent = item.title;
+                    const detailSpan = document.createElement('span');
+                    detailSpan.textContent = item.detail;
+                    itemDiv.appendChild(titleSpan);
+                    itemDiv.appendChild(document.createElement('br'));
+                    itemDiv.appendChild(detailSpan);
+                    redirectButton.appendChild(itemDiv);
+                });
+                const claimButton = document.createElement('span');
+                claimButton.textContent = 'SIAPA CEPAT DIA DAPAT';
+                claimButton.style.fontWeight = 'bold';
+                redirectButton.appendChild(claimButton);
+                redirectButton.classList.add('active');
             }
-        }
+        }, 1000);
+
+        redirectButton.addEventListener('click', () => {
+            if (redirectButton.classList.contains('active')) {
+                window.location.href = `https://wa.me/${whatsappNumber}?text=${promoText}`;
+            }
+        });
     </script>
 </body>
 </html>
