--- a/index.html
+++ b/index.html
@@ -228,6 +228,8 @@
                 <li>8. <span class="nama-peserta">aufa</span> - Peserta Lomba Jum'at, 11 Apr</li>
                 <li>9. <span class="nama-peserta">rizky</span> - Peserta Lomba Jum'at, 11 Apr</li>
                 <li>10. <span class="nama-peserta">nurizaazhr</span> - Peserta Lomba Jum'at, 11 Apr</li>
+
+               <li>11. <span class="nama-peserta">M Haikal</span> - Peserta Lomba Jum'at, 11 Apr</li> 
             </ul>
             <p class="payment-pending">Caption: Payment Pending <i>LOMBA BERAKHIR Besok jam 4 pagi</i><br>maaf untuk yg belum terpilih jangan khawatir, besok aku akan adakan lomba lagi</p>
         </div>
